Added new endpoint and updated the OpenAPI docs
